# ba-thesis

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
document/: properties.tex  references.bib  thesis.tex
document/chap/: anhang.tex  appendix.tex  architecture.tex  auflistungen.tex  basics.tex  bibtex.bib  bilder.tex  code.tex  einleitung.tex  evaluation.tex  future_work.tex  gliederung.tex  implementation.tex  introduction.tex  matheumgebung.tex  organisation.tex  s3_lib.tex  structure.tex  struktur.tex  summary.tex  tabellen.tex  text.tex  zitieren.tex
document/class/: thesis.cls
project/: prepare.sh  run.sh
project/measurements/: .gitignore  analyze.py  local-minio-output.ods  local-s3p-output.ods  remote-minio-output.ods  remote-mixed-output.ods  remote-s3p-output.ods
project/measurements/data/local-minio/: warp-127.0.0.1:9000-1MiB.csv.zst  warp-127.0.0.1:9000-500KiB.csv.zst
project/measurements/data/local-s3p/: warp-127.0.0.1:4356-1MiB.csv.zst  warp-127.0.0.1:4356-500KiB.csv.zst  warp-127.0.0.1:9000-100KiB.csv.zst  warp-127.0.0.1:9000-10KiB.csv.zst  warp-127.0.0.1:9000-1KiB.csv.zst  warp-127.0.0.1:9000-1MiB.csv.zst  warp-127.0.0.1:9000-500KiB.csv.zst
project/measurements/data/remote-minio/: warp-10.0.0.3:9000-1MiB.csv.zst  warp-10.0.0.3:9000-500KiB.csv.zst
project/measurements/data/remote-mixed/: warp-127.0.0.1:4356-1MiB.csv.zst
project/measurements/data/remote-s3p/: warp-10.0.0.3:4356-1MiB.csv.zst  warp-10.0.0.3:4356-500KiB.csv.zst  warp-127.0.0.1:4356-1MiB.csv.zst
project/measurements/data/remote-s3p/remote-s3p-2/: warp-127.0.0.1:4356-1MiB.csv.zst
project/s3p/: .gitignore  Cargo.toml  config.toml  docker-compose.yaml
project/s3p/src/: client.rs  main.rs  middleware.rs  pipeline.rs  request.rs  server.rs
project/s3p/src/cli/: mod.rs
project/s3p/src/client/: mod.rs  s3.rs
project/s3p/src/config/: mod.rs
project/s3p/src/middleware/: cache.rs  mod.rs
project/s3p/src/middleware/cache/: index.rs  logic.rs  mod.rs
project/s3p/src/req/: mod.rs  request.rs  response.rs  s3.rs
project/s3p/src/server/: mod.rs  s3.rs
project/s3p/src/webhook/: event_types.rs  mod.rs  s3.rs
