[package]
name = "s3p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-credential-types = { version = "0.55", features = [
    "hardcoded-credentials",
] }
async-trait = "0.1"
aws-sdk-s3 = "0.26"
clap = { version = "4.2.4", features = ["derive"] }
dotenvy = "0.15"
futures = { version = "0.3.28" }
http = "0.2.9"
hyper = { version = "0.14", features = ["full"] }
miette = { version = "5.7", features = ["fancy"] }
moka = { version = "0.11", features = ["future"] }
parking_lot = { version = "0.12", features = ["send_guard"] }
s3s = { version = "0.5.0-dev", path = "./deps/s3s/crates/s3s" }
s3s-aws = { version = "0.5.0-dev", path = "./deps/s3s/crates/s3s-aws" }
thiserror = "1.0"
tokio = { version = "1.27", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "tracing-log",
] }

[dev-dependencies]
ctor = "0.2"
