[package]
name = "s3p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-credential-types = { version = "0.55", features = [
    "hardcoded-credentials",
] }
async-broadcast = "0.5"
async-trait = "0.1"
aws-sdk-s3 = "0.26" # needs to match aws-sdk-s3 of s3s-aws
clap = { version = "4.2.4", features = ["derive"] }
dotenvy = "0.15"
futures = { version = "0.3.28" }
http = "0.2.9"
hyper = { version = "0.14", features = ["full"] }
miette = { version = "5.7", features = ["fancy"] }
moka = { version = "0.11", features = ["future"] }
multi_index_map = "0.5.0"
parking_lot = { version = "0.12", features = ["send_guard"] }
s3s = { version = "0.5.0-dev", path = "./deps/s3s/crates/s3s" }
s3s-aws = { version = "0.5.0-dev", path = "./deps/s3s/crates/s3s-aws" }
serde = "1.0"
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
tantivy = "0.20"
thiserror = "1.0"
tokio = { version = "1.27", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "tracing-log",
] }

# required by multi_index_map
slab = { version = "0.4" }
rustc-hash = { version = "1.1" }

[dev-dependencies]
ctor = "0.2"
