[package]
name = "s3p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-credential-types = { version = "0.55", features = [
    "hardcoded-credentials",
] }
async-broadcast = "0.5"
async-trait = "0.1"
aws-sdk-s3 = "0.28.0" # needs to match aws-sdk-s3 of s3s-aws
aws-smithy-async = { version = "0.55.3", features = ["rt-tokio"] }
aws-smithy-client = { version = "0.55.3", features = ["rustls"] }
clap = { version = "4.2.4", features = ["derive"] }
dotenvy = "0.15"
futures = { version = "0.3.28" }
http = "0.2.9"
http-cache-semantics = "1.0.1"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = { version = "0.24.1", features = ["http2"] }
miette = { version = "5.7", features = ["fancy"] }
moka = { version = "0.11", features = ["future"] }
# modified from: https://github.com/Nugine/s3s/tree/e8bba54/crates/s3s
s3s = { version = "0.6.1-dev", path = "./deps/s3s/crates/s3s" }
schematic = { version = "0.9.4", default-features = false, features = [
    "toml",
    "valid_url",
] }
# modified from: https://github.com/Nugine/s3s/tree/e8bba54/crates/s3s-aws
s3s-aws = { version = "0.6.1-dev", path = "./deps/s3s/crates/s3s-aws" }
serde = "1.0"
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
tokio = { version = "1.27", features = ["full"] }
toml = "0.7"
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "tracing-log",
] }

[dev-dependencies]
ctor = "0.2"
tempfile = "3.6.0"
